--- a/html51/bootstrap/Book/books-store/package.json
+++ b/html51/bootstrap/Book/books-store/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "node ./bin/www"
+        "start": "node./bin/www",
+        "dev": "nodemon./bin/www"
     },
     "dependencies": {
         "cookie-parser": "~1.4.4",
@@ -14,4 +15,3 @@
         "mongoose": "5.9.7",
         "morgan": "~1.9.1"
     }
-}
